# users-service

./: .env.example  Cargo.toml  Dockerfile  README.md  users.toml
.github/workflows/: check.yaml  publish.yaml  test.yaml
.sqlx/: query-1c5db3f87a64b5ca5adebab0c46120d2fc43d9bc9daf0dac0eaef2a19e87d770.json  query-22f812c02ae9a29c2c1009d80a5d93c3f9cebce91ec8824851d0589a3d3991ce.json  query-717fc7e8ddc969d84ddae99d6af428dd9d0e9e2e9f17ec7550415b6858761825.json  query-79d8c4f4e9433263f0327a4b01faefefc10827dac61dadd7156cb27d298b6076.json  query-7c73d1dbcd9207f3b4512b2a9768553bd8a006a584049f6197dbf1ae79a17d5c.json  query-a8e128985ae2bb1ce94fd8cacd62de2d05adfeec59b285f2c6d57628c2853e32.json  query-b6f16c06aaaa7216b6ddd0b310919bb92889be7277c061ece72bc10692b8217b.json  query-bc9e15c8f71ff2a813f266dcf7684db1bd7228262b69c892690bb59b94c8a4a8.json  query-c6658202e7e5d5805b48e889e95d94ff6551fadb1d4065e5597fb9b44b1854b5.json  query-e9b507b7d0a51a9fe8f8e28e1bd801e315ce6079b6b77a9cfdaf33f3ec6c147e.json
contrib/: compose.yaml
migrations/: 20250209160904_user.sql
src/: entity.rs  lib.rs  main.rs  server.rs  state.rs  utils.rs
src/state/: mutate.rs  query.rs
tests/: helpers.rs  main.rs
tests/fixtures/: users.sql
tests/grpc/: mod.rs  mutate.rs  query.rs
tests/grpc/mutate/: create.rs  delete.rs  follow.rs  upsert.rs
tests/grpc/query/: all.rs  by_id.rs  by_name.rs  following.rs
