[package]
name = "users-service"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12.3"


[dependencies.sellershut-core]
git = "https://github.com/sellershut/sellershut-core"
features = ["rpc-server-users", "serde", "time"]

[dependencies.sellershut-services]
git = "https://github.com/sellershut/services-lib"
features = ["api", "postgres", "tracing"]
