[package]
name = "users-service"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
config = { version = "0.15.7", features = ["toml"], default-features = false }
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tonic = "0.12.3"
tracing = "0.1.41"

[dependencies.sellershut-core]
git = "https://github.com/sellershut/sellershut-core"
features = ["rpc-server-users", "serde", "time"]

[dependencies.sellershut-services]
git = "https://github.com/sellershut/services-lib"
features = ["api", "id-gen", "postgres", "tracing"]

[dev-dependencies]
fake = { version = "4.0.0", features = ["derive", "time"] }

[dev-dependencies.sellershut-core]
git = "https://github.com/sellershut/sellershut-core"
features = ["rpc-client-users"]

[profile.release]
lto = true
strip = true
codegen-units = 1
